# log-analyzer-cli

./: .coverage  .gitignore  README.md  log_parser.py  main.py  pyproject.toml
log_analyzer/: analyzer.py  log_parser.py  main.py  reporting.py  utils.py
log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_log_parser.py  test_main.py  test_reporting.py
