[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log_analyzer"
version = "0.1.0"


[project.optional-dependencies]
test = [
    "pytest>=7.0",        
    "pytest-cov>=3.0",    
]

[tool.setuptools.packages.find]
include = ["log_analyzer"]
exclude = ["logs"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests"
]
addopts = "--cov=log_analyzer --cov-report term-missing"

[tool.coverage.run]
omit = [
    "log_analyzer/__init__.py",
    "tests/*", # Исключаем сами тесты
]

[tool.coverage.report]
fail_under = 75